BUGFIX: Reclaims functionality from z-index issue.

--- a/src/components/ForecastDisplay/styles.scss
+++ b/src/components/ForecastDisplay/styles.scss
@@ -100,6 +100,8 @@
 }
 
 .material {
+  position: relative;
+  z-index: 999;
   box-shadow: 0px 1px 3px black;
 }
 
