--- a/src/components/map/styles.scss
+++ b/src/components/map/styles.scss
@@ -5,5 +5,4 @@
 .mapContainer {
   height: 50vh;
   width: 100%;
-  z-index: -999;
 }
